'fix gap'

--- a/src/App.css
+++ b/src/App.css
@@ -199,7 +199,7 @@
   width: 25px;
   height: 25px;
   opacity: 1;
-  gap: 15px;
+  margin-right: 15px;
 }
 
 .rate:nth-child(2){
@@ -367,6 +367,7 @@ footer {
   .rate {
     height: 20px;
     width: 20px;
+    margin-right: 5px;
   }
 }
 
